--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,6 +22,16 @@
   justify-content: space-between;
 }
 
+.logoWrapp {
+  width: 32px;
+  @media screen and (min-width: $tablet) {
+    width: 28px;
+  }
+  @media screen and (min-width: $laptop) {
+    width: 228px;
+  }
+}
+
 #smallLogo {
   display: inline-block;
   width: 32px;
